--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
         "build": "vite build",
         "run": "php artisan serve",
         "Create Storage image": "php artisan storage:link",
-        "makeController": "php artisan make:controller PostController ",
+        "makeController": "php artisan make:controller ProfileController ",
         "makeController Full Class": "php artisan make:controller Admin/AdminHomeController --resource",
         "makeModel-Controller-Migration": "php artisan make:model Loainhadat -mcr",
         "RunPHPCommand": " php artisan tinker ",
         "CreatePass": "echo bcrypt('12345')",
-        "CreateMigration": "php artisan make:migration update_baidang4 ",
+        "CreateMigration": "php artisan make:migration create_password_resets_table ",
         "makeMigration": "php artisan migrate",
-        "makeOnlyMigration": "php artisan migrate --path=database/migrations/2025_03_16_031010_update_baidang4.php",
+        "makeOnlyMigration": "php artisan migrate --path=database/migrations/2025_03_22_083440_create_password_resets_table.php",
         "makeFormRequest": "php artisan make:request Menu/CreateFormRequest",
         "list": "php artisan route:list",
         "storage": "php artisan storage:link",
